glemt at committe i lang tid commit :))

--- a/babushka/bistroBabushka.html
+++ b/babushka/bistroBabushka.html
@@ -8,18 +8,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bistro Babushka</title>
     <link rel="stylesheet" href="">
-    <style>
-        img {
-            width: 100%;
-        }
 
+    <style>
+        @font-face {
+    font-family: 'mbf_taurianregular';
+    src: url('mbf_taurian-webfont.woff2') format('woff2'),
+         url('mbf_taurian-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
         section {
             padding: 30px;
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
             grid-template-rows: 1fr 1fr 1fr 1fr;
             grid-gap: 20px;
         }
+        img {
+            width: 100%;
+            align-content: center;
+        }
+/*
+
+
+
 
         article {
             border: 1px solid black;
@@ -33,20 +46,26 @@
             text-align: center;
         }
 
+        h1 {
+            text-align: center;
+        }
+
         nav {
             float: none;
-  position: absolute;
-  top: 2%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+            position: fixed;
+            top: 5%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             padding: 10px;
+            justify-content: space-between;
+            align-content: center;
+         width: 100%;
         }
 
-        .valgt{
+        .valgt {
             background-color: red;
         }
-
-
+*/
 
     </style>
 </head>
@@ -54,18 +73,23 @@
 
 
 <body>
-   <header>
-      <h1>Alle</h1>
-       <nav>
-           <button data-retter="alle" class="valgt">Alle</button>
-           <button data-retter="forretter" >Forretter</button>
-           <button data-retter="hovedretter">Hovedretter</button><button data-retter="sideorders">Sideorders</button>
-           <button data-retter="desserter">Desserter</button>
-           <button data-retter="drikkevarer">Drikkevarer</button>
-       </nav>
-   </header>
+    <header>
+
+        <nav>
+            <div class="bannerBillede">
+     <img src="babushkaLogo.png" alt="headerBillede">
+
+  </div>
+            <button data-retter="alle" class="valgt">Alle</button>
+            <button data-retter="forretter">Forretter</button>
+            <button data-retter="hovedretter">Hovedretter</button><button data-retter="sideorders">Sideorders</button>
+            <button data-retter="desserter">Desserter</button>
+            <button data-retter="drikkevarer">Drikkevarer</button>
+        </nav>
+
+    </header>
     <template>
-        <article>
+        <article class="indhold">
 
 
 
@@ -89,8 +113,9 @@
 
 
     <main>
-        <section id="menu">
 
+        <section id="menu">
+<h1>MENU</h1>
 
 
         </section>
@@ -111,7 +136,7 @@
         const header = document.querySelector("header h1");
 
 
- document.addEventListener("DOMContentLoaded", start)
+        document.addEventListener("DOMContentLoaded", start)
         let retter;
         let filter = "alle";
 
@@ -124,9 +149,10 @@
             hentData();
         }
 
-        function filtrerRetter(){
+        function filtrerRetter() {
+            console.log("flitrer retter");
             filter = this.dataset.retter;
- document.querySelector(".valgt").classList.remove("valgt");
+            document.querySelector(".valgt").classList.remove("valgt");
             this.classList.add("valgt")
             vis();
             header.textContent = this.textContent;
@@ -136,6 +162,7 @@
 
 
         async function hentData() {
+            console.log("hent data")
             const resspons = await fetch(url, options);
             retter = await resspons.json();
             //personer = await JSONData.json();
@@ -157,17 +184,17 @@
             sektion.textContent = "";
             retter.forEach(ret => {
                 console.log("Retter", ret.kategori);
-                if (filter == ret.kategori || filter == "alle" ) {
+                if (filter == ret.kategori || filter == "alle") {
                     const klon = template.cloneNode(true);
                     klon.querySelector(".billede").src = medieurl + ret.billede;
                     klon.querySelector("h2").textContent = ret.navn;
                     klon.querySelector(".id").textContent = ret.id;
-                    klon.querySelector(".kategori").textContent = ret.kategori;
-                    klon.querySelector(".kortBeskrivelse").textContent = ret.kortBeskrivelse;
-                    klon.querySelector(".langBeskrivelse").textContent = ret.langBeskrivelse;
-                    klon.querySelector(".pris").textContent = ret.pris;
-                    klon.querySelector(".oprindelsesRegion").textContent = ret.oprindelsesRegion;
-
+                    //klon.querySelector(".kategori").textContent = ret.kategori;
+                    klon.querySelector(".kortBeskrivelse").textContent = ret.kortbeskrivelse;
+                    //klon.querySelector(".langBeskrivelse").textContent = ret.langbeskrivelse;
+                    klon.querySelector(".pris").textContent = ret.pris + " DKK";
+                    //klon.querySelector(".oprindelsesRegion").textContent = ret.oprindelsesregion;
+                    klon.querySelector(".indhold").addEventListener("click", () => visIndhold(ret));
                     sektion.appendChild(klon);
                 }
 
@@ -176,7 +203,11 @@
             })
         }
 
+        function visIndhold(hvad) {
+            console.log("kan sende videre til detalje side")
 
+            location.href = `detaljer.html?id=${hvad._id}`;
+        }
 
     </script>
 </body>
