--- a/babushka/bistroBabushka.html
+++ b/babushka/bistroBabushka.html
@@ -6,79 +6,113 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;600&display=swap" rel="stylesheet">
     <title>Bistro Babushka</title>
-    <link rel="stylesheet" href="">
 
     <style>
+        /*
         @font-face {
     font-family: 'mbf_taurianregular';
     src: url('mbf_taurian-webfont.woff2') format('woff2'),
          url('mbf_taurian-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
-
-}
-
+*/
         section {
-            padding: 30px;
+            padding: 30px 70px 30px 70px;
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            grid-template-rows: 1fr 1fr 1fr 1fr;
+            /*            grid-template-rows: 1fr 1fr 1fr 1fr;*/
+            max-width: 1000px;
             grid-gap: 20px;
+            margin: 0 auto;
         }
-        img {
+
+        main img {
             width: 100%;
             align-content: center;
+            height: 200px;
+            object-fit: cover;
         }
 
-        .bannerBillede{
+        .bannerBillede {
             padding: 20px 2px 20px 2px;
-        }
-
-        h1{
-        text-align: center;
-             font-family: 'mbf_taurianregular';
-            font-weight: normal;
-    font-style: normal;
-        }
-/*
-
-
-
-
-        article {
-            border: 1px solid black;
         }
 
         p {
             text-align: center;
-        }
-
-        h2 {
-            text-align: center;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 200;
         }
 
         h1 {
             text-align: center;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+
         }
 
         nav {
-            float: none;
-            position: fixed;
-            top: 5%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            padding: 10px;
-            justify-content: space-between;
-            align-content: center;
-         width: 100%;
-        }
-
-        .valgt {
-            background-color: red;
-        }
+            /*
+            display: flex;
+            justify-content: center;
+            max-width: 200px;
+            margin: 0 auto;
 */
+            width: 100%;
 
+
+
+        }
+
+
+
+
+        h2 {
+            text-align: center;
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+
+        }
+
+        button {
+            border: none;
+            background-color: white;
+            color: #073da3;
+            font-weight: 600;
+            align-content: center;
+            font-family: 'Poppins', sans-serif;
+
+
+        }
+
+        button:hover {
+            color: #d32d27;
+        }
+
+        article {
+            border: 1px solid #d32d27;
+            padding: 8px;
+
+
+        }
+
+
+        @media only screen and (min-width: 700px) {
+
+            nav {
+                flex-direction: row;
+                display: flex;
+                justify-content: center;
+                width: 100%;
+                margin: 0 auto;
+            }
+
+
+
+        }
     </style>
 </head>
 
@@ -86,16 +120,16 @@
 
 <body>
     <header>
-<div class="bannerBillede">
-     <img src="babushkaLogo.svg" alt="headerBillede">
-  </div>
-       <h1>Alle</h1>
+        <div class="bannerBillede">
+            <img src="babushkaLogo.svg" alt="headerBillede">
+        </div>
+        <h1>Menu</h1>
         <nav>
-              <button data-retter="alle" class="valgt">Alle</button>
-            <button data-retter="forretter">Forretter</button>
-            <button data-retter="hovedretter">Hovedretter</button><button data-retter="sideorders">Sideorders</button>
-            <button data-retter="desserter">Desserter</button>
-            <button data-retter="drikkevarer">Drikkevarer</button>
+            <button data-retter="alle">MENU</button>
+            <button data-retter="forretter">FORRETTER</button>
+            <button data-retter="hovedretter">HOVEDRETTER</button><button data-retter="sideorders">SIDEORDERS</button>
+            <button data-retter="desserter">DESSERTER</button>
+            <button data-retter="drikkevarer">DRIKKEVARER</button>
 
         </nav>
     </header>
@@ -105,8 +139,9 @@
 
 
 
-            <h2></h2>
+
             <img class="billede">
+            <h2></h2>
             <p class="id"></p>
             <p class="kategori"></p>
             <p class="langBeskrivelse"></p>
@@ -164,8 +199,8 @@
         function filtrerRetter() {
             console.log("flitrer retter");
             filter = this.dataset.retter;
-            document.querySelector(".valgt").classList.remove("valgt");
-            this.classList.add("valgt")
+            //document.querySelector(".valgt").classList.remove("valgt");
+            //this.classList.add("valgt")
             vis();
             header.textContent = this.textContent;
 
@@ -220,10 +255,5 @@
 
             location.href = `detaljer.html?id=${hvad._id}`;
         }
-
     </script>
-</body>
-
-
-
-</html>
+</body></html>
